Fixes #1: Wrap task names

--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,7 @@ th {
 
 .task-name {
   padding: 8px;
+  max-width: 400px;
 }
 
 .task-name p {
